--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log In</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body style="background: url('LogBG.jpg') no-repeat center center fixed; background-size: cover;">
@@ -27,8 +27,8 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit" class="login-button">Login</button>
-            <p class="signup-link">Don't have an account? <a href="signup.html">Sign Up</a></p>
+            <button type="submit" class="login-button">Sign Up</button>
+            <p class="signup-link">Already Have an Account <a href="login.html">Log in</a></p>
         </form>
     </div>
     <div class="Image_log">
