Main page Content Created

--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles log.css">
 </head>
 <body style="background: url('LogBG.jpg') no-repeat center center fixed; background-size: cover;">
     <header class="Header-bar">
@@ -12,7 +12,7 @@
 
         </div>
         <nav class="head-buttons">
-            <button class="nav-button">Sign Up</button>
+            <a href="signup.html"><button class="nav-button">Sign Up</button></a>
         </nav>
     </header>
     <div class="main-container">
@@ -34,5 +34,18 @@
     <div class="Image_log">
     </div>
     </div>
+    <footer>
+        <div class="footer-content">
+            <p>Contact Us:</p>
+            <p>Email: support@taskmaster.com</p>
+            <p>Phone:123-456-7890</p>
+            <p>Follow us on:</p>
+            <ul class="social-links">
+                <li><a>Facebook</a></li>
+                <li><a>Twitter</a></li>
+                <li><a>Instagram</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
