--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles sign.css">
 </head>
 <body style="background: url('LogBG.jpg') no-repeat center center fixed; background-size: cover;">
     <header class="Header-bar">
@@ -12,27 +12,56 @@
 
         </div>
         <nav class="head-buttons">
-            <button class="nav-button">Sign Up</button>
+            <a href="login.html"><button class="nav-button">Log In</button></a>
         </nav>
     </header>
     <div class="main-container">
-    <div class="login-box">
-        <h2 class="logh2">Log in to Your Account</h2>
-        <form action="" method="post" class="login-form">
+    <div class="sign-box">
+        <h2 class="signh2">Sign Up</h2>
+        <form action="" method="post" class="sign-form">
+            <div class="form-group">
+                <label for="firstname">First Name:</label>
+                <input type="text" id="first name" name="first name" required>
+            </div>
+            <div class="form-group">
+                <label for="lastname">Last Name:</label>
+                <input type="text" id="last name" name="last name" required>
+            </div>
             <div class="form-group">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
-                <label for="password">Password:</label>
+                <label for="email">E-mail::</label>
+                <input type="text" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Set Password:</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <button type="submit" class="login-button">Sign Up</button>
-            <p class="signup-link">Already Have an Account <a href="login.html">Log in</a></p>
+            <div class="form-group">
+                <label for="password">Reenter Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit" class="sign-button">Sign Up</button>
+            <p class="login-link">Already Have an Account <a href="login.html">Log in</a></p>
         </form>
     </div>
     <div class="Image_log">
     </div>
     </div>
+    <footer>
+        <div class="footer-content">
+            <p>Contact Us:</p>
+            <p>Email: support@taskmaster.com</p>
+            <p>Phone:123-456-7890</p>
+            <p>Follow us on:</p>
+            <ul class="social-links">
+                <li><a>Facebook</a></li>
+                <li><a>Twitter</a></li>
+                <li><a>Instagram</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
